--- a/pages/home.html
+++ b/pages/home.html
@@ -2,16 +2,20 @@
     
     <div class="tile is-parent is-vertical is-3" id="network-stats">
 
-        <article class="tile is-child notification is-size-6" style="padding-top:30px;">
+        <article class="tile is-child notification is-size-6">
             <div>
                 <i class="fas fa-bars" aria-hidden="true"></i> <b>Height: </b> <span id="networkHeight"></span>
-            <div>
- 
+            </div>
+            <div style="height:20px;">
             </div>
         </article>   
 
-        <article class="tile is-child notification is-size-6" style="padding-top:30px;">
-            <i class="fas fa-exchange-alt" aria-hidden="true"></i> <b>Transactions: </b> <span id="networkTransactions"></span>
+        <article class="tile is-child notification is-size-6">
+            <div>
+                <i class="fas fa-exchange-alt" aria-hidden="true"></i> <b>Transactions: </b> <span id="networkTransactions"></span>
+            </div>
+            <div style="height:20px;">
+            </div>
         </article>  
 
         <article class="tile is-child notification is-size-6">
@@ -43,8 +47,12 @@
             </div>
         </article>  
 
-        <article class="tile is-child notification is-size-6" style="padding-top:30px;">
+        <article class="tile is-child notification is-size-6">
+            <div>
                 <i class="fas fa-coins" aria-hidden="true"></i> <b>Reward: </b> <span id="currentReward"></span>
+            </div>
+            <div style="height:20px;">
+            </div>
         </article>  
     </div>
  
