--- a/pages/home.html
+++ b/pages/home.html
@@ -2,11 +2,11 @@
     
     <div class="tile is-parent is-vertical is-3">
 
-        <article class="tile is-child notification is-size-6" style="padding-top:30px;">
+        <article class="tile is-child notification is-size-6">
             <i class="fas fa-bars" aria-hidden="true"></i> <b>Height: </b> <span id="networkHeight"></span>
         </article>   
 
-        <article class="tile is-child notification is-size-6" style="padding-top:30px;">
+        <article class="tile is-child notification is-size-6">
             <i class="fas fa-exchange-alt" aria-hidden="true"></i> <b>Transactions: </b> <span id="networkTransactions"></span>
         </article>  
 
