--- a/pages/blockchain_block.html
+++ b/pages/blockchain_block.html
@@ -5,7 +5,8 @@
 			<p class="title size-is-4">Block <span id="block_hash size-is-7"><span id="block.hash"></span></span></p>
 		</article>
 	</div>
-
+</div>
+<div class="tile is-ancestor">
     <div class="tile is-parent is-vertical is-3">
 		<article class="tile is-child notification is-size-6">
 			<i class="fas fa-bolt" aria-hidden="true"></i> <b>Height: </b> <span id="block_height"><span id="block.height"></span></span>
