--- a/pages/blockchain_block.html
+++ b/pages/blockchain_block.html
@@ -13,7 +13,7 @@
 		</article>   
 
 		<article class="tile is-child notification is-size-6">
-			<i class="fas fa-clock" aria-hidden="true"></i> <b>Timestamp: </b> <span id="block.timestamp"></span></span>
+			<i class="fas fa-clock" aria-hidden="true"></i> <b>Timestamp: </b> <span id="block.timestamp"></span>
 		</article>
 
 		<article class="tile is-child notification is-size-6">
@@ -39,7 +39,7 @@
 		</article>
 
 		<article class="tile is-child notification is-size-6">
-				<i class="fas fa-lock" aria-hidden="true"></i> <b>Total Transactions: </b> <span id="block.totalTransactions"></span>
+			<i class="fas fa-lock" aria-hidden="true"></i> <b>Total Transactions: </b> <span id="block.totalTransactions"></span>
 		</article>	
 	</div>
 
