--- a/pages/blockchain_block.html
+++ b/pages/blockchain_block.html
@@ -45,7 +45,7 @@
 
     <div class="tile is-parent is-vertical is-3">
 		<article class="tile is-child notification is-size-6">
-			<i class="fas fa-bolt" aria-hidden="true"></i> <b>Tx. Size: <span id="block.transactionsSize"></span>
+			<i class="fas fa-bolt" aria-hidden="true"></i> <b>Tx. Size: </b> <span id="block.transactionsSize"></span>
 		</article>   
 
 		<article class="tile is-child notification is-size-6">
@@ -62,7 +62,7 @@
 	</div>
     <div class="tile is-parent is-vertical is-3">
 		<article class="tile is-child notification is-size-6">
-			<i class="fas fa-bolt" aria-hidden="true"></i> <b>Reward Penalty: <span id="block.rewardPenalty"></span>
+			<i class="fas fa-bolt" aria-hidden="true"></i> <b>Reward Penalty: </b> <span id="block.rewardPenalty"></span>
 		</article>   
 
 		<article class="tile is-child notification is-size-6">
