--- a/pages/blockchain_block.html
+++ b/pages/blockchain_block.html
@@ -9,7 +9,7 @@
 <div class="tile is-ancestor">
     <div class="tile is-parent is-vertical is-3">
 		<article class="tile is-child notification is-size-6">
-			<i class="fas fa-bolt" aria-hidden="true"></i> <b>Height: </b> <span id="block_height"><span id="block.height"></span></span>
+			<i class="fas fa-bars" aria-hidden="true"></i> <b>Height: </b> <span id="block_height"><span id="block.height"></span></span>
 		</article>   
 
 		<article class="tile is-child notification is-size-6">
@@ -17,7 +17,7 @@
 		</article>
 
 		<article class="tile is-child notification is-size-6">
-			<i class="fas fa-users" aria-hidden="true"></i> <b>Version: </b> <span id="block.version"></span>
+			<i class="fas fa-code-branch" aria-hidden="true"></i> <b>Version: </b> <span id="block.version"></span>
 		</article>
 
 		<article class="tile is-child notification is-size-6">
@@ -27,25 +27,25 @@
 
     <div class="tile is-parent is-vertical is-3">
 		<article class="tile is-child notification is-size-6">
-			<i class="fas fa-bolt" aria-hidden="true"></i> <b>Orphan: </b> <span id="block.orphan"></span>
+			<i class="fas fa-cube" aria-hidden="true"></i> <b>Orphan: </b> <span id="block.orphan"></span>
 		</article>   
 
 		<article class="tile is-child notification is-size-6">
-			<i class="fas fa-clock" aria-hidden="true"></i> <b>Transaction: </b> <span id="block.transactions"></span>
+			<i class="fas fa-exchange-alt" aria-hidden="true"></i> <b>Transaction: </b> <span id="block.transactions"></span>
 		</article>
 
 		<article class="tile is-child notification is-size-6">
-			<i class="fas fa-users" aria-hidden="true"></i> <b>Total Supply: </b> <span id="block.totalCoins"></span>
+			<i class="fas fa-money-bill-alt" aria-hidden="true"></i> <b>Total Supply: </b> <span id="block.totalCoins"></span>
 		</article>
 
 		<article class="tile is-child notification is-size-6">
-			<i class="fas fa-lock" aria-hidden="true"></i> <b>Total Transactions: </b> <span id="block.totalTransactions"></span>
+			<i class="fas fa-exchange-alt" aria-hidden="true"></i> <b>Total Transactions: </b> <span id="block.totalTransactions"></span>
 		</article>	
 	</div>
 
     <div class="tile is-parent is-vertical is-3">
 		<article class="tile is-child notification is-size-6">
-			<i class="fas fa-bolt" aria-hidden="true"></i> <b>Tx. Size: </b> <span id="block.transactionsSize"></span>
+			<i class="fas fa-file" aria-hidden="true"></i> <b>Tx. Size: </b> <span id="block.transactionsSize"></span>
 		</article>   
 
 		<article class="tile is-child notification is-size-6">
@@ -53,7 +53,7 @@
 		</article>
 
 		<article class="tile is-child notification is-size-6">
-			<i class="fas fa-users" aria-hidden="true"></i> <b>Tx. Median: </b> <span id="block.currentTxsMedian"></span>
+			<i class="fas fa-exchange-alt" aria-hidden="true"></i> <b>Tx. Median: </b> <span id="block.currentTxsMedian"></span>
 		</article>
 
 		<article class="tile is-child notification is-size-6">
@@ -62,15 +62,15 @@
 	</div>
     <div class="tile is-parent is-vertical is-3">
 		<article class="tile is-child notification is-size-6">
-			<i class="fas fa-bolt" aria-hidden="true"></i> <b>Reward Penalty: </b> <span id="block.rewardPenalty"></span>
+			<i class="fas fa-cross" aria-hidden="true"></i> <b>Reward Penalty: </b> <span id="block.rewardPenalty"></span>
 		</article>   
 
 		<article class="tile is-child notification is-size-6">
-			<i class="fas fa-cube" aria-hidden="true"></i> <b>Base Reward: </b> <span id="block.baseReward"></span>
+			<i class="fas fa-coins" aria-hidden="true"></i> <b>Base Reward: </b> <span id="block.baseReward"></span>
 		</article>
 
 		<article class="tile is-child notification is-size-6">
-			<i class="fas fa-users" aria-hidden="true"></i> <b>Tx. Fee: </b> <span id="block.transactionsFee"></span>
+			<i class="fas fa-money-bill-alt" aria-hidden="true"></i> <b>Tx. Fee: </b> <span id="block.transactionsFee"></span>
 		</article>
 
 		<article class="tile is-child notification is-size-6">
