--- a/pages/home.html
+++ b/pages/home.html
@@ -11,7 +11,7 @@
         </article>  
 
         <article class="tile is-child notification is-size-6">
-            <i class="fas fa-lock" aria-hidden="true"></i> <b>Supply: </b> <span id="totalCoins"></span>
+            <i class="fas fa-money-bill-alt" aria-hidden="true"></i> <b>Supply: </b> <span id="totalCoins"></span>
         </article>  
 
         <article class="tile is-child notification is-size-6">
